tests/positive/Dependencies/Input.juvix
module Input;

import Extra open;
import Base open;
import Stdlib.Prelude open;

axiom x : Extra;
