tests/negative/issue3161/Stdlib/Trait/Partial.juvix
module Stdlib.Trait.Partial;

import Stdlib.Data.String.Base open;
import Stdlib.Debug.Fail as Debug;
